# os_lab4

./: CMakeLists.txt
include/: square.h
lib_1/: prime_1.cpp  square_1.cpp
lib_2/: prime_2.cpp  square_2.cpp
os_lab4_report/inc/include/: prime.h
os_lab4_report/inc/program1/: main.cpp
os_lab4_report/inc/program2/: main.cpp
os_lab4_report/src/: benchmark.tex  literature.tex  problem.tex  src.tex  thinks.tex  titlepage.tex
